--- a/pom.xml
+++ b/pom.xml
@@ -28,29 +28,23 @@
 			<systemPath>${basedir}/libs/iConomy7.0.6.jar</systemPath>
 		</dependency>
 		<!-- McMMO -->
-		<dependency>
-			<groupId>com.gmail.nossr50.mcMMO</groupId>
-			<artifactId>mcMMO</artifactId>
-			<version>1.5.04</version>
-		</dependency>
+        <dependency>
+            <groupId>com.gmail.nossr50</groupId>
+            <artifactId>mcmmo</artifactId>
+            <version>1.5.04-SNAPSHOT</version>
+        </dependency>
 		<!-- Vault -->
 		<dependency>
 			<groupId>net.milkbowl.vault</groupId>
 			<artifactId>vaultapi</artifactId>
 			<version>1.5.6</version>
 		</dependency>
-		<!-- MyPet -->
-		<dependency>
-	    		<groupId>com.github.xXKeyleXx</groupId>
-	    		<artifactId>MyPet</artifactId>
-	    		<version>master-SNAPSHOT</version>
-		</dependency>
 		<!-- MythicMobs4 -->
-		<dependency>
-			<groupId>net.elseland.xikage.MythicMobs</groupId>
-			<artifactId>mythicmobs</artifactId>
-			<version>4.0.1</version>
-		</dependency>
+        <dependency>
+            <groupId>net.elseland.xikage.MythicMobs</groupId>
+            <artifactId>mythicmobs</artifactId>
+            <version>4.0.1</version>
+        </dependency>
 		<!-- MythicMobs -->
 		<dependency>
 			<groupId>net.elseland.xikage.MythicMobs</groupId>
@@ -67,6 +61,12 @@
 			<artifactId>worldedit</artifactId>
 			<version>6.1</version>
 		</dependency>
+        <dependency>
+            <groupId>de.keyle</groupId>
+            <artifactId>mypet</artifactId>
+            <version>2.3.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 	<repositories>
 		<!-- Spigot -->
@@ -82,6 +82,10 @@
 			<id>betonquest-repo</id>
 			<url>http://betonquest.betoncraft.pl/mvn</url>
 		</repository>
+        <repository>
+            <id>mypet-repo</id>
+            <url>https://nexus.keyle.de/content/groups/public/</url>
+        </repository>
 	</repositories>
 	<!-- Builds Plugin -->
 	<build>
@@ -102,14 +106,6 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.1</version>
-				<configuration>
-					<outputDirectory>C:\Users\Arte\Desktop\Server\plugins</outputDirectory>
 				</configuration>
 			</plugin>
 		</plugins>
